<resources>
    <string name="app_name">MokaTest</string>

    <string name="text_title_library">LIBRARY</string>
    <string name="text_title_discounts">ALL DISCOUNTS</string>
    <string name="text_title_all_items">ALL ITEMS</string>
    <string name="text_title_shopping_cart">SHOPPING CART</string>

    <string name="text_lbl_title">Title</string>
    <string name="text_lbl_price">Price</string>
    <string name="text_lbl_discount">Discount</string>
    <string name="text_lbl_quantity">Quantity</string>
    <string name="text_lbl_no_items">no items</string>

    <!-- LIBRARY -->

    <string name="text_lbl_discounts">All Discounts</string>
    <string name="text_lbl_all_items">All Items</string>

    <!-- BUTTON -->
    <string name="text_btn_cancel">Cancel</string>
    <string name="text_btn_save">Save</string>
    <string name="text_btn_clear">CLEAR SALE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
