<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="7">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/text_margin"
        android:layout_toLeftOf="@+id/tv_price"
        android:layout_toRightOf="@id/img_thumbnail"
        android:layout_weight="4"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/text_lbl_title"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/tv_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:layout_weight="1"
        android:text="@string/text_lbl_quantity"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:layout_weight="2"
        android:text="@string/text_lbl_price"
        android:textAppearance="?attr/textAppearanceListItem" />
</LinearLayout>
