<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.moehandi.moktest.ui.shoppingcart.ShoppingCartFragment">

    <TextView
        android:id="@+id/tv_no_items"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:gravity="center"
        android:text="@string/text_lbl_no_items"
        android:textSize="24dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleview_items"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_clear"></androidx.recyclerview.widget.RecyclerView>


    <Button
        android:id="@+id/btn_clear"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_total"
        android:background="@android:color/holo_red_light"
        android:text="@string/text_btn_clear"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tv_total"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/text_lbl_price"
        android:textSize="36dp" />

</RelativeLayout>
